# apps/api/src/system/user/user.controller.ts
@@ -10,7 +10,7 @@ import {
 import { UserService } from './user.service';
 import { CreateUserDto } from './dto/create-user.dto';
 import { UpdateUserDto } from './dto/update-user.dto';
-import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { ApiTags } from '@nestjs/swagger';
 import { SysUserModel } from 'src/common/models/sys_user';
 import { ApiResponseJson } from 'src/common/decorators/api-response.decorator';
 
@@ -26,21 +26,25 @@ export class UserController {
   }
 
   @Get()
+  @ApiResponseJson([SysUserModel], { summary: "查询所有用户" })
   findAll() {
     return this.userService.findAll();
   }
 
   @Get(':id')
+  @ApiResponseJson(SysUserModel, { summary: "查询用户详情" })
   findOne(@Param('id') id: string) {
     return this.userService.findOne(+id);
   }
 
   @Patch(':id')
+  @ApiResponseJson(SysUserModel, { summary: "更新用户" })
   update(@Param('id') id: string, @Body() updateUserDto: UpdateUserDto) {
     return this.userService.update(+id, updateUserDto);
   }
 
   @Delete(':id')
+  @ApiResponseJson(SysUserModel, { summary: "删除用户" })
   remove(@Param('id') id: string) {
     return this.userService.remove(+id);
   }
